// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko acp --help 1`] = `
"miko acp

start ACP (Agent Client Protocol) server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: miko.local)
                                                                    [string] [default: "miko.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
      --cwd          working directory [string] [default: "<HOME>"]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko mcp --help 1`] = `
"miko mcp

manage MCP (Model Context Protocol) servers

Commands:
  miko mcp add [name]     add an MCP server
  miko mcp list           list MCP servers and their status                            [aliases: ls]
  miko mcp auth [name]    authenticate with an OAuth-enabled MCP server
  miko mcp logout [name]  remove OAuth credentials for an MCP server
  miko mcp debug <name>   debug OAuth connection for an MCP server

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko attach --help 1`] = `
"miko attach <url>

attach to a running miko server

Positionals:
  url  http://localhost:4096                                                     [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --dir         directory to run in                                                     [string]
  -c, --continue    continue the last session                                              [boolean]
  -s, --session     session id to continue                                                  [string]
      --fork        fork the session when continuing (use with --continue or --session)    [boolean]
  -p, --password    basic auth password (defaults to MIKO_SERVER_PASSWORD)                  [string]
  -u, --username    basic auth username (defaults to MIKO_SERVER_USERNAME or 'miko')        [string]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko run --help 1`] = `
"miko run [message..]

run miko with a message

Positionals:
  message  message to send                                                     [array] [default: []]

Options:
  -h, --help                          show help                                            [boolean]
  -v, --version                       show version number                                  [boolean]
      --print-logs                    print logs to stderr                                 [boolean]
      --log-level                     log level [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                          run without external plugins                         [boolean]
      --command                       the command to run, use message for args              [string]
  -c, --continue                      continue the last session                            [boolean]
  -s, --session                       session id to continue                                [string]
      --fork                          fork the session before continuing (requires --continue or
                                      --session)                                           [boolean]
      --share                         share the session                                    [boolean]
  -m, --model                         model to use in the format of provider/model          [string]
      --agent                         agent to use                                          [string]
      --format                        format: default (formatted) or json (raw JSON events)
                                          [string] [choices: "default", "json"] [default: "default"]
  -f, --file                          file(s) to attach to message                           [array]
      --title                         title for the session (uses truncated prompt if no value
                                      provided)                                             [string]
      --attach                        attach to a running miko server (e.g., http://localhost:4096)
                                                                                            [string]
  -p, --password                      basic auth password (defaults to MIKO_SERVER_PASSWORD)[string]
  -u, --username                      basic auth username (defaults to MIKO_SERVER_USERNAME or
                                      'miko')                                               [string]
      --dir                           directory to run in, path on remote server if attaching
                                                                                            [string]
      --port                          port for the local server (defaults to random port if no value
                                      provided)                                             [number]
      --variant                       model variant (provider-specific reasoning effort, e.g., high,
                                      max, minimal)                                         [string]
      --thinking                      show thinking blocks                                 [boolean]
      --replay                        replay visible session history on interactive resume
                                                                          [boolean] [default: false]
      --replay-limit                  cap visible interactive replay to the newest N messages
                                                                                            [number]
  -i, --interactive                   run in direct interactive split-footer mode
                                                                          [boolean] [default: false]
      --dangerously-skip-permissions  auto-approve permissions that are not explicitly denied
                                      (dangerous!)                        [boolean] [default: false]
      --demo                          enable direct interactive demo slash commands; pass one as the
                                      message to run it immediately       [boolean] [default: false]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko debug --help 1`] = `
"miko debug

debugging and troubleshooting tools

Commands:
  miko debug config        show resolved configuration
  miko debug lsp           LSP debugging utilities
  miko debug rg            ripgrep debugging utilities
  miko debug file          file system debugging utilities
  miko debug scrap         list all known projects
  miko debug skill         list all available skills
  miko debug snapshot      snapshot debugging utilities
  miko debug startup       print startup timing
  miko debug agent <name>  show agent configuration details
  miko debug v2            debug v2 catalog and built-in plugins
  miko debug info          show debug information
  miko debug paths         show global paths (data, config, cache, state)
  miko debug wait          wait indefinitely (for debugging)

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko providers --help 1`] = `
"miko providers

manage AI providers and credentials

Commands:
  miko providers list         list providers and credentials                           [aliases: ls]
  miko providers login [url]  log in to a provider
  miko providers logout       log out from a configured provider

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko agent --help 1`] = `
"miko agent

manage agents

Commands:
  miko agent create  create a new agent
  miko agent list    list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko upgrade --help 1`] = `
"miko upgrade [target]

upgrade miko to the latest or a specific version

Positionals:
  target  version to upgrade to, for ex '0.1.48' or 'v0.1.48'                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -m, --method      installation method to use
                          [string] [choices: "curl", "npm", "pnpm", "bun", "brew", "choco", "scoop"]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko uninstall --help 1`] = `
"miko uninstall

uninstall miko and remove all related files

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
  -c, --keep-config  keep configuration files                             [boolean] [default: false]
  -d, --keep-data    keep session data and snapshots                      [boolean] [default: false]
      --dry-run      show what would be removed without removing          [boolean] [default: false]
  -f, --force        skip confirmation prompts                            [boolean] [default: false]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko serve --help 1`] = `
"miko serve

starts a headless miko server

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: miko.local)
                                                                    [string] [default: "miko.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko web --help 1`] = `
"Performing one time database migration, may take a few minutes...
sqlite-migration:done
Database migration complete.
⠀                     
 █▀▄▀█ █ █ █ █ █▀▀█ 
 █ ▀ █ █ █▀▄ █ █  █ 
 ▀   ▀ ▀ ▀ ▀ ▀ ▀▀▀▀

Commands:
  miko completion          generate shell completion script
  miko acp                 start ACP (Agent Client Protocol) server
  miko mcp                 manage MCP (Model Context Protocol) servers
  miko [project]           start miko tui                                                  [default]
  miko attach <url>        attach to a running miko server
  miko run [message..]     run miko with a message
  miko debug               debugging and troubleshooting tools
  miko providers           manage AI providers and credentials                       [aliases: auth]
  miko agent               manage agents
  miko upgrade [target]    upgrade miko to the latest or a specific version
  miko uninstall           uninstall miko and remove all related files
  miko serve               starts a headless miko server
  miko models [provider]   list all available models
  miko export [sessionID]  export session data as JSON
  miko import <file>       import session data from JSON file or URL
  miko github              manage GitHub agent
  miko pr <number>         fetch and checkout a GitHub PR branch, then run miko
  miko session             manage sessions
  miko plugin <module>     install plugin and update config                          [aliases: plug]
  miko db                  database tools

Positionals:
  project  path to start miko in                                                            [string]

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: miko.local)
                                                                    [string] [default: "miko.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
  -m, --model        model to use in the format of provider/model                           [string]
  -c, --continue     continue the last session                                             [boolean]
  -s, --session      session id to continue                                                 [string]
      --fork         fork the session when continuing (use with --continue or --session)   [boolean]
      --prompt       prompt to use                                                          [string]
      --agent        agent to use                                                           [string]
"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko models --help 1`] = `
"miko models [provider]

list all available models

Positionals:
  provider  provider ID to filter models by                                                 [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --verbose     use more verbose model output (includes metadata like costs)           [boolean]
      --refresh     refresh the models cache from models.dev                               [boolean]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko stats --help 1`] = `
"Performing one time database migration, may take a few minutes...
sqlite-migration:done
Database migration complete.
⠀                     
 █▀▄▀█ █ █ █ █ █▀▀█ 
 █ ▀ █ █ █▀▄ █ █  █ 
 ▀   ▀ ▀ ▀ ▀ ▀ ▀▀▀▀

Commands:
  miko completion          generate shell completion script
  miko acp                 start ACP (Agent Client Protocol) server
  miko mcp                 manage MCP (Model Context Protocol) servers
  miko [project]           start miko tui                                                  [default]
  miko attach <url>        attach to a running miko server
  miko run [message..]     run miko with a message
  miko debug               debugging and troubleshooting tools
  miko providers           manage AI providers and credentials                       [aliases: auth]
  miko agent               manage agents
  miko upgrade [target]    upgrade miko to the latest or a specific version
  miko uninstall           uninstall miko and remove all related files
  miko serve               starts a headless miko server
  miko models [provider]   list all available models
  miko export [sessionID]  export session data as JSON
  miko import <file>       import session data from JSON file or URL
  miko github              manage GitHub agent
  miko pr <number>         fetch and checkout a GitHub PR branch, then run miko
  miko session             manage sessions
  miko plugin <module>     install plugin and update config                          [aliases: plug]
  miko db                  database tools

Positionals:
  project  path to start miko in                                                            [string]

Options:
  -h, --help         show help                                                             [boolean]
  -v, --version      show version number                                                   [boolean]
      --print-logs   print logs to stderr                                                  [boolean]
      --log-level    log level                  [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure         run without external plugins                                          [boolean]
      --port         port to listen on                                         [number] [default: 0]
      --hostname     hostname to listen on                           [string] [default: "127.0.0.1"]
      --mdns         enable mDNS service discovery (defaults hostname to 0.0.0.0)
                                                                          [boolean] [default: false]
      --mdns-domain  custom domain name for mDNS service (default: miko.local)
                                                                    [string] [default: "miko.local"]
      --cors         additional domains to allow for CORS                      [array] [default: []]
  -m, --model        model to use in the format of provider/model                           [string]
  -c, --continue     continue the last session                                             [boolean]
  -s, --session      session id to continue                                                 [string]
      --fork         fork the session when continuing (use with --continue or --session)   [boolean]
      --prompt       prompt to use                                                          [string]
      --agent        agent to use                                                           [string]
"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko export --help 1`] = `
"miko export [sessionID]

export session data as JSON

Positionals:
  sessionID  session id to export                                                           [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --sanitize    redact sensitive transcript and file data                              [boolean]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko import --help 1`] = `
"miko import <file>

import session data from JSON file or URL

Positionals:
  file  path to JSON file or share URL                                           [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko github --help 1`] = `
"miko github

manage GitHub agent

Commands:
  miko github install  install the GitHub agent
  miko github run      run the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko pr --help 1`] = `
"miko pr <number>

fetch and checkout a GitHub PR branch, then run miko

Positionals:
  number  PR number to checkout                                                  [number] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko session --help 1`] = `
"miko session

manage sessions

Commands:
  miko session list                list sessions
  miko session delete <sessionID>  delete a session

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko plugin --help 1`] = `
"miko plugin <module>

install plugin and update config

Positionals:
  module  npm module name                                                        [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -g, --global      install in global config                              [boolean] [default: false]
  -f, --force       replace existing plugin version                       [boolean] [default: false]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko db --help 1`] = `
"miko db

database tools

Commands:
  miko db [query]     open an interactive sqlite3 shell or run a query                     [default]
  miko db path        print the database path

Positionals:
  query  SQL query to execute                                                               [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --format      Output format                 [string] [choices: "json", "tsv"] [default: "tsv"]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko mcp list --help 1`] = `
"miko mcp list

list MCP servers and their status

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko mcp add --help 1`] = `
"miko mcp add [name]

add an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --url         URL for a remote MCP server                                             [string]
      --env         environment variable for a local MCP server (KEY=VALUE)                  [array]
      --header      HTTP header for a remote MCP server (KEY=VALUE)                          [array]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko mcp auth --help 1`] = `
"miko mcp auth [name]

authenticate with an OAuth-enabled MCP server

Commands:
  miko mcp auth list  list OAuth-capable MCP servers and their auth status             [aliases: ls]

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko mcp logout --help 1`] = `
"miko mcp logout [name]

remove OAuth credentials for an MCP server

Positionals:
  name  name of the MCP server                                                              [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko providers list --help 1`] = `
"miko providers list

list providers and credentials

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko providers login --help 1`] = `
"miko providers login [url]

log in to a provider

Positionals:
  url  miko auth provider                                                                   [string]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -p, --provider    provider id or name to log in to (skips provider selection)             [string]
  -m, --method      login method label (skips method selection)                             [string]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko providers logout --help 1`] = `
"miko providers logout

log out from a configured provider

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko agent create --help 1`] = `
"miko agent create

create a new agent

Options:
  -h, --help                  show help                                                    [boolean]
  -v, --version               show version number                                          [boolean]
      --print-logs            print logs to stderr                                         [boolean]
      --log-level             log level         [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure                  run without external plugins                                 [boolean]
      --path                  directory path to generate the agent file                     [string]
      --description           what the agent should do                                      [string]
      --mode                  agent mode            [string] [choices: "all", "primary", "subagent"]
      --permissions, --tools  comma-separated list of permissions to allow (default: all).
                              Available: "bash, read, edit, glob, grep, webfetch, task, todowrite,
                              websearch, lsp, skill"                                        [string]
  -m, --model                 model to use in the format of provider/model                  [string]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko agent list --help 1`] = `
"miko agent list

list all available agents

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko session list --help 1`] = `
"miko session list

list sessions

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
  -n, --max-count   limit to N most recent sessions                                         [number]
      --format      output format             [string] [choices: "table", "json"] [default: "table"]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko session delete --help 1`] = `
"miko session delete <sessionID>

delete a session

Positionals:
  sessionID  session ID to delete                                                [string] [required]

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko github install --help 1`] = `
"miko github install

install the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko github run --help 1`] = `
"miko github run

run the GitHub agent

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]
      --event       GitHub mock event to run the agent for                                  [string]
      --token       GitHub personal access token (github_pat_********)                      [string]"
`;

exports[`miko CLI help-text snapshots every documented command emits stable help text: miko db path --help 1`] = `
"miko db path

print the database path

Options:
  -h, --help        show help                                                              [boolean]
  -v, --version     show version number                                                    [boolean]
      --print-logs  print logs to stderr                                                   [boolean]
      --log-level   log level                   [string] [choices: "DEBUG", "INFO", "WARN", "ERROR"]
      --pure        run without external plugins                                           [boolean]"
`;
